--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
   <header>
     <div class="avatar"></div>
-    <h1>狗狗年齡換算器（使用 UCSD 研究公式）</h1>
+    <h1>狗狗年齡換算器</h1>
+    <h4>（使用 UCSD 研究公式）</h4>
     <div class="muted">公式來源說明：human_age = 16 × ln(dog_age) + 31（dog_age 單位：年）。</div>
   </header>
 
