--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
   <link rel="manifest" href="manifest.json">
-  <title>狗狗年齡換算器（UCSD 公式）</title>
+  <title>妙麗年齡計算機（UCSD 公式）</title>
 </head>
 <body>
   <header>
     <div class="avatar"></div>
-    <h1>狗狗年齡換算器</h1>
+    <h1>妙麗年齡計算機</h1>
     <h4>（使用 UCSD 研究公式）</h4>
     <div class="muted">公式來源說明：human_age = 16 × ln(dog_age) + 31（dog_age 單位：年）。</div>
   </header>
 
   <main class="card">
-    <label for="birth">輸入狗狗出生日期</label>
+    <label for="birth">輸入妙麗出生日期</label>
     <input id="birth" type="date" />
     <div style="margin-top:10px">
       <button id="calc">計算現在年齡</button>
